fix herosection button and banner (CTA) spacing

--- a/app/app.css
+++ b/app/app.css
@@ -74,6 +74,6 @@
   }
   
   .button {
-    @apply py-3 px-7 cursor-pointer rounded-full text-white text-sm border-none hover:bg-black bg-black md:text-base;
+    @apply py-2 px-5 cursor-pointer rounded-full text-white text-sm border-none hover:bg-black bg-black md:text-base;
   }
 }
